<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_searchable"
    tools:context="com.cschefs.dontstarve.SearchableActivity">

    <EditText
        android:id="@+id/input_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_search_text"
        android:inputType="textVisiblePassword"/>
    <ListView
        android:id="@+id/list_ingredients_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_search"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/new_button_search" />
    <Button
        android:id="@+id/new_button_search"
        android:text="@string/new_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="newItem"/>
    <Button
        android:id="@+id/add_button_search"
        android:text="@string/add_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="43dp"
        android:layout_marginEnd="43dp"
        android:layout_alignTop="@+id/new_button_search"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="addIngredient"/>

</RelativeLayout>
