<resources>
    <!-- Menu -->
    <string name="app_name">What\'s in my Fridge</string>
    <string name="home_menu_text">Home</string>
    <string name="search_menu_text">Search</string>
    <string name="recipe_menu_text">Recipes</string>
    <string name="settings_menu_text">Settings</string>
    <!-- Main Page -->
    <string name="empty_list_text">Your list of ingredients is currently empty. Click Search Ingredients to start adding a list of ingredients!</string>
    <string name="main_context_delete">Delete</string>
    <string name="clear_button_text">Clear</string>
    <string name="list_is_empty">No ingredients to clear.</string>
    <string name="find_button_text">Find Recipe</string>
    <string name="clear_all_text">"Are you sure you want to clear all?"</string>
    <!-- Search Page -->
    <string name="title_activity_search">Search</string>
    <string name="title_activity_searchable">Searchable</string>
    <string name="search_button_text">Search Ingredients</string>
    <string name="input_search_text">Search for an ingredient here...</string>
    <string name="new_button_text">New Item</string>
    <string name="new_item_detail_text">Add a new item</string>
    <string name="new_item_edit_text">Type in a new item here...</string>
    <string name="item_not_found">The following ingredient is not found.</string>
    <string name="item_is_empty">No ingredient to add.</string>
    <string name="item_exists">Item already exists.</string>
    <string name="add_button_text">Add</string>
    <!-- Recipe Page -->
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="recipe_context_url">View Recipe</string>
    <!-- Other -->
    <string name="back_button_text">Back</string>
    <string-array name="string_ingredients">
        <item>onions</item>
        <item>salmon</item>
        <item>pea beans</item>
        <item>honey</item>
        <item>hazelnuts</item>
        <item>cayenne pepper</item>
        <item>monkfish</item>
        <item>pinto beans</item>
        <item>croutons</item>
        <item>sour cream</item>
        <item>portabella mushrooms</item>
        <item>bass</item>
        <item>broth</item>
        <item>chestnuts</item>
        <item>black olives</item>
        <item>bean sauce</item>
        <item>turtle</item>
        <item>chicory</item>
        <item>tomato puree</item>
        <item>pesto</item>
        <item>rhubarb</item>
        <item>curry paste</item>
        <item>lemon juice</item>
        <item>cucumbers</item>
        <item>aioli</item>
        <item>gouda</item>
        <item>green beans</item>
        <item>zest</item>
        <item>bruschetta</item>
        <item>garlic powder</item>
        <item>bouillon</item>
        <item>geese</item>
        <item>eggplants</item>
        <item>turkeys</item>
        <item>cumin</item>
        <item>truffles</item>
        <item>powdered sugar</item>
        <item>wild rice</item>
        <item>blue cheese</item>
        <item>Irish cream liqueur</item>
        <item>corn syrup</item>
        <item>shrimp</item>
        <item>veal</item>
        <item>horseradish</item>
        <item>adobo</item>
        <item>cream of tartar</item>
        <item>melons</item>
        <item>ice cream</item>
        <item>flax seed</item>
        <item>spaghetti squash</item>
        <item>custard</item>
        <item>coconut oil</item>
        <item>sugar</item>
        <item>red pepper flakes</item>
        <item>coconut milk</item>
        <item>lemon Peel</item>
        <item>mussels</item>
        <item>bagels</item>
        <item>feta cheese</item>
        <item>garlic</item>
        <item>butter</item>
        <item>romaine lettuce</item>
        <item>alligator</item>
        <item>date sugar</item>
        <item>chili sauce</item>
        <item>hash browns</item>
        <item>cream cheese</item>
        <item>raw sugar</item>
        <item>habanero chilies</item>
        <item>yogurt</item>
        <item>orange peels</item>
        <item>rice wine</item>
        <item>alfredo sauce</item>
        <item>ketchup</item>
        <item>cranberries</item>
        <item>won ton skins</item>
        <item>mustard seeds</item>
        <item>chambord</item>
        <item>lentils</item>
        <item>eggs</item>
        <item>Havarti cheese</item>
        <item>dried leeks</item>
        <item>macaroni</item>
        <item>thyme</item>
        <item>corned beef</item>
        <item>beans</item>
        <item>succotash</item>
        <item>avocados</item>
        <item>barbecue sauce</item>
        <item>condensed milk</item>
        <item>snapper</item>
        <item>rum</item>
        <item>rice</item>
        <item>gorgonzola</item>
        <item>broccoli raab</item>
        <item>leeks</item>
        <item>oregano</item>
        <item>water chestnuts</item>
        <item>rice vinegar</item>
        <item>swordfish</item>
    </string-array>
</resources>