<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <EditText
        android:id="@+id/new_item_edit"
        android:hint="@string/new_item_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>